--- a/GL_POINTS/GL_POINTS.vcxproj
+++ b/GL_POINTS/GL_POINTS.vcxproj
@@ -130,12 +130,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\PointCloudHelper.cpp" />
     <ClCompile Include="src\PointRenderer.cpp" />
     <ClCompile Include="src\CubeRenderer.cpp" />
     <ClCompile Include="src\BasicPointRenderer.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\KeyboardInput.cpp" />
     <ClCompile Include="src\MouseInput.cpp" />
     <ClCompile Include="src\OpenGL\GL_Context.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\PointCloudHelper.h" />
     <ClInclude Include="src\PointRenderer.h" />
     <ClInclude Include="src\CubeRenderer.h" />
     <ClInclude Include="src\BasicPointRenderer.h" />
