--- a/GL_POINTS/imgui.ini
+++ b/GL_POINTS/imgui.ini
@@ -3,3 +3,13 @@ Pos=4,2
 Size=414,278
 Collapsed=0
 
+[Window][Render method]
+Pos=58,62
+Size=311,190
+Collapsed=0
+
+[Window][Render view]
+Pos=7,48
+Size=456,338
+Collapsed=0
+
