--- a/GL_POINTS/imgui.ini
+++ b/GL_POINTS/imgui.ini
@@ -13,3 +13,13 @@ Pos=7,48
 Size=456,338
 Collapsed=0
 
+[Window][Choose point cloud]
+Pos=60,60
+Size=164,100
+Collapsed=0
+
+[Window][Choose rendering method]
+Pos=60,60
+Size=416,408
+Collapsed=0
+
