--- a/GL_POINTS/GL_POINTS.vcxproj.filters
+++ b/GL_POINTS/GL_POINTS.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClCompile Include="src\Renderers\CSBasicRenderer.cpp" />
     <ClCompile Include="src\Renderers\CSZBufferRenderer.cpp" />
     <ClCompile Include="src\Renderers\CSEarlyZRenderer.cpp" />
-    <ClCompile Include="src\Renderers\CSCAVGZRenderer.cpp" />
+    <ClCompile Include="src\Renderers\CSCAVGPointRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderers\GLPointsRenderer.h" />
@@ -354,7 +354,7 @@
     <ClInclude Include="src\Renderers\CSBasicRenderer.h" />
     <ClInclude Include="src\Renderers\CSZBufferRenderer.h" />
     <ClInclude Include="src\Renderers\CSEarlyZRenderer.h" />
-    <ClInclude Include="src\Renderers\CSCAVGZRenderer.h" />
+    <ClInclude Include="src\Renderers\CSCAVGPointRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\GL_POINTS_f.glsl" />
@@ -500,9 +500,9 @@
     <None Include="res\shaders\Compute_shader_basic_c.glsl" />
     <None Include="res\shaders\Compute_shader_z_buffer_c.glsl" />
     <None Include="res\shaders\Compute_shader_early_z_c.glsl" />
-    <None Include="res\shaders\cavg\Compute_shader_z_buffer_c.glsl" />
-    <None Include="res\shaders\cavg\Compute_shader_color_c.glsl" />
     <None Include="res\shaders\cavg\Compute_shader_early_z_c.glsl" />
+    <None Include="res\shaders\cavg\Compute_shader_color_c.glsl" />
     <None Include="res\shaders\cavg\Compute_shader_final_c.glsl" />
+    <None Include="res\shaders\cavg\Compute_shader_z_buffer_c.glsl" />
   </ItemGroup>
 </Project>
